# PatricTheDuck_GrainOfLife

./: README.md  Video  granular.scd  joystick.ino
JUCE/bitcrusher/src/: PluginProcessor.cpp  PluginProcessor.h
JUCE/delay/src/: PluginEditor.cpp  PluginEditor.h
JUCE/eq/: CMakeLists.txt
JUCE/eq/src/: PluginEditor.cpp  PluginEditor.h
JUCE/reverb/: CMakeLists.txt
JUCE/reverb/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Processing/: game_of_life.pde
SuperCollider/: granular_synth.scd
bitcrusher/: CMakeLists.txt
bitcrusher/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp
delay/: CMakeLists.txt
delay/src/: PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
eq/src/: PluginProcessor.cpp  PluginProcessor.h
